2001-06-28 11:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mml2015.el (mml2015-format-error): New function.
	(mml2015-mailcrypt-decrypt, mml2015-mailcrypt-clear-decrypt)
	(mml2015-mailcrypt-verify, mml2015-gpg-clear-verify)
	(mml2015-mailcrypt-clear-verify, mml2015-gpg-verify): Use it. 

2001-06-26 22:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnrss.el (nnrss-retrieve-headers): The description may not exist.
	Suggested by Christoph Conrad <C.Conrad@cli.de>.

	* gnus-sum.el (gnus-summary-set-local-parameters): Don't override
	group variables.

2001-06-25 10:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnslashdot.el (nnslashdot-write-groups): Use gnus-prin1.

	* nnrss.el (nnrss-save-server-data): Bind print-level and print-length.
	(nnrss-save-group-data): Ditto.
	
	* gnus-agent.el (gnus-agent-save-alist): Ditto.

2001-06-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-do-send-housekeeping): Narrow to headers.

2001-06-24  Simon Josefsson  <jas@extundo.com>

	* rfc2047.el (rfc2047-fold-region): The check to skip WSP
	insertion when breaking lines looked for " \t" instead of "[ \t]".
	(rfc2047-encode-message-header): Fold lines even if
	no QP encoding is done.

2001-06-23  Simon Josefsson  <jas@extundo.com>
	From Samuel Tardieu <sam@inf.enst.fr>

	* smime.el (smime-keys): Support additional certificates.
	(smime-make-certfiles): New function.
	(smime-sign-region): Use previous variables.
	(smime-get-certfiles): New function.
	(smime-sign-buffer): Use it.
	(smime-verify-region): Support both CAfile and CApath.

2001-06-23  Simon Josefsson  <jas@extundo.com>

	* smime.el (smime-decrypt-region): Perhaps work.

2001-06-22 10:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-msg.el (gnus-copy-article-buffer): Typo.

2001-04-06  Ralph Schleicher  <rs@nunatak.allgaeu.org>

	* mm-decode.el (mm-save-part): Rewrite file name.
	(mm-file-name-rewrite-functions): New variable.
	(mm-file-name-delete-whitespace): New function.